fix sort by not align issue on IE

--- a/src/targets/beacon/styles/views/hotel-detail.less
+++ b/src/targets/beacon/styles/views/hotel-detail.less
@@ -972,6 +972,9 @@ hotel-detail .hotel-detail__rooms-compare {
           height: 35px;
         }
       }
+      .filter-label {
+        position: static;
+      }
     }
 
     pricing-switch a {
